since kvt-0.18.5
 - changed the layouting of the terminal-dialog. 

since kvt-0.18.4
 - added a hack for stupid clients like pine who cannot handle "\n"
    in selections but need "\r"   (Matthias)
 - fixes for VMS (Andrew Phillips)

since kvt-0.18.3
  - fixed a bug that made it impossible to resize the window with the
    menu when the window size was manipulated with the normal window
    manager resize mechanism (Mario Weilguni <mweilguni@kde.org>)
  - removed some DOS-newlines (^M), which cause compile errors on
    some compilers (Mario Weilguni <mweilguni@kde.org>)
  - fixed "New Terminal" (Matthias)
  - fixed scrollbar repositioning (relied on some old qt side effect) (Matthias)

since kvt-0.18.2
  - fixed SM again (Jens stuff was broken, probably I applied the patch
     wrong. Anyways I redid it with C++ and Qt)   (Matthias)
  - tiny fix for "-meta" with missing argument (Matthias)

since kvt-0.18.1
  - save command line parameters into kvtrc (Jens Jahny)
  - restore process with all command line parameters (Jens Jahny)
  - fixed tab order in terminal dialog (Mario Weilguni)
  - small fix for the -geometry option (Matthias)
  - ported cut and paste to QClipboard since it made sometimes trouble
    in combination with certain applications (Matthias)
	  

since kvt-0.18:
  - Custom Colors (Bernd Wuebben)	
  - mouse selection more xterm-like	
  - alpha patches (Uwe Thiem)
  - patchlevel 1 to clearify upload confusions due to demeter.
  - compiles under X11R5 again (Juergen Schumacher)


since kvt-0.17:
  - modifications and enhancements to keyboard handling: now kvt is quite 
    compatible with a decent xterm (which itself is very vt-220 like).
    This includes control sequences, numpad  and dead-key support. (Matthias)
  - cleaned up the distribution. Also added LICENSE.readme (Matthias)
  - new color scheme "KDE". Looks similar to modern xterms. (Matthias)
  - small fixes for the "Terminal Options" dialog (Matthias)